--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,8 +7,7 @@ Depends: R (>= 3.4.3)
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
-Imports:
-binom
+Imports: binom
 Suggests: 
     knitr,
     rmarkdown
