--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,5 +7,5 @@ Depends: R (>= 3.4.3)
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
-Imports: binom
+Imports: binom, rmarkdown, knitr
 VignetteBuilder: knitr
