--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: EndpointsPKG
-Title: What the Package Does (one line, title case)
+Title: Calculates Objective Response Rates and Disease Control Rates along with Binomial Confidence Intervals
 Version: 0.0.0.9000
 Authors@R: person("Jon", "Gilman", email = "jgilman1@ufl.edu", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+Description: This package will calculate the Objective Response Rate and Disease Control Rates along with corresponding exact binomial confidence intervals.  This package is intended it help analyze relevant endpoints in early phase oncology trials in order to assess efficacy of a drug product.   
 Depends: R (>= 3.4.3)
 License: What license is it under?
 Encoding: UTF-8
