--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,5 +7,7 @@ Depends: R (>= 3.4.3)
 License: MIT
 Encoding: UTF-8
 LazyData: true
-Imports: binom, rmarkdown, knitr
+RoxgenNote: 6.0.1
+LinkingTo: Rcpp
+Imports: binom, rmarkdown, knitr, Rcpp
 VignetteBuilder: knitr
