--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,4 +10,5 @@ LazyData: true
 RoxgenNote: 6.0.1
 LinkingTo: Rcpp
 Imports: binom, rmarkdown, knitr, Rcpp
+Suggests: knitr, rmarkdown
 VignetteBuilder: knitr
