--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,6 @@ License: MIT
 Encoding: UTF-8
 LazyData: true
 RoxgenNote: 6.0.1
-LinkingTo: Rcpp
-Imports: binom, rmarkdown, knitr, Rcpp
+Imports: binom
 Suggests: knitr, rmarkdown
 VignetteBuilder: knitr
